{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 54,
  "lineage": "c1dfba2a-07d7-a397-aa9f-0b5d917b7b68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0b8b1f0b24f33e77a",
            "id": "rtb-0b8b1f0b24f33e77a",
            "owner_id": "547111537536",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-tf-route-public",
              "Product": "route-table"
            },
            "vpc_id": "vpc-09a9b11f9e4454d66"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00dee353761dc1ee4",
            "owner_id": "547111537536",
            "tags": {
              "Name": "test-tf-internet-gateway",
              "Product": "internet-gateway"
            },
            "vpc_id": "vpc-09a9b11f9e4454d66"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00dee353761dc1ee4",
            "id": "r-rtb-0b8b1f0b24f33e77a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b8b1f0b24f33e77a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:547111537536:vpc/vpc-09a9b11f9e4454d66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0fde6e22ed638d9a0",
            "default_route_table_id": "rtb-0b8b1f0b24f33e77a",
            "default_security_group_id": "sg-03c7b5cafd7859e5a",
            "dhcp_options_id": "dopt-041bd37e92d6962df",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a9b11f9e4454d66",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b8b1f0b24f33e77a",
            "owner_id": "547111537536",
            "tags": {
              "Name": "test-tf",
              "Product": "vpc"
            }
          }
        }
      ]
    }
  ]
}